[package]
name = "easy-fs-fuse"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.9"
redoxfs = { git = "https://github.com/tsukinaha/redoxfs.git" }
syscall = { package = "redox_syscall", git = "https://github.com/redox-os/syscall.git" }

# [features]
# board_qemu = []
# board_k210 = []
